--- a/Version1/styles/styles.scss
+++ b/Version1/styles/styles.scss
@@ -63,22 +63,22 @@ section{
 .sec2{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(20, 20, 80);
+    // background-color: rgb(20, 20, 80);
 }
 .sec3{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(20, 80, 20);
+    // background-color: rgb(20, 80, 20);
 }
 .sec4{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(80, 20, 20);
+    // background-color: rgb(80, 20, 20);
 }
 .sec5{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(80, 20, 80);
+    // background-color: rgb(80, 20, 80);
 }
 
 .active{
@@ -130,3 +130,44 @@ section{
         }
     }
 }
+
+/*Header-content*/
+.header-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+    .left-header{
+        display: flex;
+        align-items: center;
+        position: relative;
+        .h-shape{
+            transition: all .1s ease-in-out;
+            width: 65%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+            clip-path: polygon(0 0, 50% 0, 100% 100%, 0% 100%);
+        }
+        .image{
+            border-radius: var(--br-sm-2);
+            height: 50%;
+            width: 40%;
+            background-color: var(--color-black);
+            transition: all 1.5s ease-in-out;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: all 1s ease-in-out;
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0);
+                }
+            }
+        }
+    }
+}
+/*Independent components*/
