--- a/Version1/styles/styles.scss
+++ b/Version1/styles/styles.scss
@@ -230,3 +230,27 @@ section{
         }
     }
 }
+
+.main-title{
+    text-align: center;
+    h2{
+        position: relative;
+        text-transform: uppercase;
+        font-size: 4rem;
+        font-weight: 10;
+        span{
+            color: var(--color-secondary);
+        }
+        .bg-text{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            color: var(--color-grey-5);
+            transition: all 1s ease-in-out;
+            z-index: -1;
+            transform: translate(-50%,-50%);
+            font-weight: 800;
+            font-size: 7rem;
+        }
+    }
+}
