--- a/website1/styles/styles.scss
+++ b/website1/styles/styles.scss
@@ -186,6 +186,158 @@ section{
         }
     }
 }
+
+/*About*/
+.about-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    padding-top: 3.5rem;
+    padding-bottom: 5rem;
+    .right-about{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2rem;
+        .about-item{
+            border: 1px solid var(--color-grey-5);
+            border-radius: 5px;
+            transition: all 1s ease-in-out;
+            box-shadow: 5px 10px 15px rgba(0,0,0,.1);
+            &:hover{
+                cursor: default;
+                transform: translateY(-10px);
+                border: 1px solid var(--color-secondary);
+                box-shadow: 5px 10px 15px rgba(0,0,0,1);
+            }
+            .abt-text{
+                padding: 1.5rem;
+                display: flex;
+                flex-direction: column;
+                .large-text{
+                    font-size: 3rem;
+                    font-weight: 700;
+                    color: var(--color-secondary);
+                }
+                .small-text{
+                    padding-left: 3rem;
+                    position: relative;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    letter-spacing: 2px;
+                    &::before{
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        top: 15px;
+                        width: 2rem;
+                        height: 2px;
+                        background-color: var(--color-grey-5);
+                    }
+                }
+            }
+        }
+    }
+    .left-about{
+        padding-right: 5rem;
+        p{
+            line-height: 2rem;
+            padding: 1rem;
+            color: var(--color-grey-1);
+            text-align: justify;
+            text-justify: inter-word;
+        }
+        h4{
+            font-size: 2rem;
+            text-transform: uppercase;
+        }
+    }
+}
+
+.about-stats{
+    padding-bottom: 4rem;
+    .stats-title{
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        text-align: center;
+        padding: 3.5rem 0;
+        position: relative;
+        // background-color: var(--color-secondary);
+        // &::before{
+        //     content: ' ';
+        //     left: 10%;
+        //     top: 0;
+        //     width: 40%;
+        //     height: 5px;
+        //     background-color: var(--color-secondary);
+        //     transform: translateX(-50%);
+        // }
+    }    
+    .progress-bars{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2rem;
+        .progress-bar{
+            display: flex;
+            flex-direction: column;
+            .prog-title{
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            .progress-con{
+                display: flex;
+                align-items: center;
+                .prog-text{
+                    color: var(--color-grey-2);
+                }
+                .progress{
+                    width: 100%;
+                    height: .5rem;
+                    background-color: var(--color-grey-4);
+                    margin-left: 1rem;
+                    position: relative;
+                    span{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: var(--color-secondary);
+                        transition: all 5s ease-in-out;
+                        width: 50%;
+                    }
+                    .html{
+                        width: 90%;
+                    }
+                    .css{
+                        width: 60%;
+                    }
+                    .javascript{
+                        width: 40%;
+                    }
+                    .python{
+                        width: 50%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.about-timeline{
+    padding-bottom: 4rem;
+    .timeline-title{
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        text-align: center;
+        padding: 3.5rem 0;
+        position: relative;
+    }
+    .timeline-items{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2rem;
+        padding-bottom: 3rem;
+    }
+}
+
 /*Independent components*/
 .btn-cont{
     display: flex;
