--- a/website1/styles/styles.scss
+++ b/website1/styles/styles.scss
@@ -9,7 +9,7 @@
     --color-primary: #191d2b;
     --color-secondary: #27AE60;
     --color-white: #FFFFFF;
-    --color-black: #000;
+    --color-black: #000000;
     --color-grey0: #f8f8f8;
     --color-grey-1: #dbe1e8;
     --color-grey-2: #b2becd;
@@ -17,6 +17,22 @@
     --color-grey-4: #454e56;
     --color-grey-5: #2a2e35;
     --color-grey-6: #12181b;
+    --br-sm-2: 14px;
+    --box-shadow-1: 0 3px 15px rgb(0,0,0,.3);
+}
+
+.light-mode{
+    --color-primary: #27AE60;
+    --color-secondary: #191d2b;
+    --color-white: #000000;
+    --color-black: #FFFFFF;
+    --color-grey0: #12181b;
+    --color-grey-1: #2a2e35;
+    --color-grey-2: #454e56;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #b2becd;
+    --color-grey-5: #dbe1e8;
+    --color-grey-6: #f8f8f8;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgb(0,0,0,.3);
 }
@@ -128,6 +144,31 @@ section{
             color: var(--color-grey-2);
             pointer-events: none;
         }
+    }
+}
+
+.theme-btn{
+    top: 5%;
+    right: 3%;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: var(--color-grey-4);
+    cursor: pointer;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 15px rgba(0,0,0,.3);
+    transition: all .1s ease-in-out;
+    &:active{
+        transform: translateY(-5px);
+    }
+    i{
+        font-size: 1.4rem;
+        color: var(--color-grey-2);
+        pointer-events: none;
+
     }
 }
 
@@ -539,10 +580,10 @@ section{
             .contact-item{
                 display: flex;
                 align-items: center;
-                justify-content: space-between;
+                justify-content: flex-start;
                 p{
                     margin: .3rem 0 !important;
-                    padding: 0 !important;
+                    padding: 0 2rem !important;
                 }
                 .icon{
                     display: grid;
@@ -552,6 +593,35 @@ section{
                         align-items: center;
                         font-size: 1.3rem;
                     }
+                }
+            }
+        }
+        .contact-icon{
+            display: flex;
+            margin-top: 2rem;
+            a{
+                display: flex;
+                align-items: center;
+                color: var(--color-white);
+                background-color: var(--color-grey-5);
+                cursor: pointer;
+                justify-content: center;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                margin: 0 .4rem;
+                transition: all .4s ease-in-out;
+                &:hover{
+                    background-color: var(--color-secondary);
+                    i{
+                        color: var(--color-primary);
+                    }
+                }
+                i{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 1.3rem;
                 }
             }
         }
